# network-api

./: .firebaserc  .gitattributes  .gitignore  1  CONTRIBUTING.md  Dockerfile  LICENSE-APACHE  README.md  docker-compose.yml  entrypoint.sh  firebase.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase-hosting-release.yml  release.yml
cli/: README.md
cli/src/: prover.rs
clients/: Dockerfile  entrypoint.sh
clients/cli/: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
clients/cli/assets/: fib_input
clients/cli/examples/: Cargo.toml
clients/cli/examples/src/: main.rs
clients/cli/proto/: orchestrator.proto
clients/cli/scripts/: package-releases.sh
clients/cli/src/: analytics.rs  config.rs  connection.rs  flops.rs  main.rs  memory_stats.rs  node_id_manager.rs  orchestrator_client.rs  prover.rs  prover_config.rs  prover_id_manager.rs  setup.rs  updater.rs  websocket.rs
clients/cli/src/config/: env_config.rs  environment.rs  mod.rs  prover.rs
clients/cli/src/network/: connection.rs  mod.rs  websocket.rs
clients/cli/src/proto/: nexus.orchestrator.rs
clients/cli/src/utils/: analytics.rs  ascii_art.rs  cli_branding.rs  experiment.rs  mod.rs  prover.rs  updater.rs
proto/: generate_protobufs.sh  orchestrator.proto
public/: install.sh
tests/: test_binary_download.sh  test_binary_version.sh  test_updater.sh  updater.sh
