[package]
name = "nexus-network"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[workspace]
members = [
    "examples",
]

[workspace.package]
edition = "2021"
version = "0.2.3"
authors = ["The Nexus Team <hello@nexus.xyz>"]
homepage = "https://nexus.xyz/"
keywords = ["nexus", "zero-knowledge", "zkvm", "cryptography", "proofs"]
categories = ["cryptography"]
publish = false

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
strip = true
codegen-units = 1

[profile.ci-build]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

[dependencies]
async-stream = "0.3"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
prost = "0.13"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
uuid = { version = "1.9", features = ["v4", "fast-rng"] }
home = "0.5.9"
random_word = { version = "0.4.3", features = ["en"] }
iana-time-zone = "0.1.60"
chrono = "0.4.38"
self_update = "0.41.0"
dirs = "5.0.1"
semver = "1.0.23"
parking_lot = "0.12.3"
colored = "2.1.0"
md5 = "0.7.0"
native-tls = "0.2"
serde ={ version = "1.0.217", features = ["derive"]}
serde_json = { version = "1.0.138"}
regex = "1.5"

nexus-core = { git = "https://github.com/nexus-xyz/nexus-zkvm", branch = "neo", package = "nexus-core" }
nexus-vm = { git = "https://github.com/nexus-xyz/nexus-zkvm", branch = "neo", package = "nexus-vm" }
nexus-common = { git = "https://github.com/nexus-xyz/nexus-zkvm", branch = "neo", package = "nexus-common" }
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", branch = "neo", package = "nexus-sdk" }
postcard = { version = "1.0.10", features = ["alloc"] }
tempfile = "3.15.0"
blake3 = { version = "1.5.5", features = ["pure"] }
rayon = "1.10"
num_cpus = "1.16"
tonic = "0.10"
sha2 = "0.10.8"
sha3 = "0.10.8"
directories = "6.0.0"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.14.0"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.13"
