[package]
name = "nexus-network"
version = "0.6.1"
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[workspace]
members = [
    "examples",
]

[workspace.package]
edition = "2021"
version = "0.2.3"
authors = ["The Nexus Team <hello@nexus.xyz>"]
homepage = "https://nexus.xyz/"
keywords = ["nexus", "zero-knowledge", "zkvm", "cryptography", "proofs"]
categories = ["cryptography"]
publish = false

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
strip = true
codegen-units = 1

[profile.ci-build]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
prost = "0.13"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
home = "0.5.9"
iana-time-zone = "0.1.60"
chrono = "0.4.38"
colored = "2.1.0"
md5 = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
sysinfo = "0.33.1"
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", branch = "neo", package = "nexus-sdk" }
rayon = "1.10"
num_cpus = "1.16"
sha3 = "0.10.8"
log = "0.4.26"

[build-dependencies]

prost-build = "0.13"
